--- a/angularHTMLayout/cwWorkflow/propertyInput.ng.html
+++ b/angularHTMLayout/cwWorkflow/propertyInput.ng.html
@@ -1,10 +1,5 @@
 <div class="label">{{getPropertyName(formInput.scriptname)}} :&nbsp;</div>
-<span
-  class="value"
-  ng-if="formInput.value && formInput.readOnly && getPropertyDataType(ng.objectType, formInput.scriptname) !=='lookup' && getPropertyDataType(ng.objectType, formInput.scriptname) !=='date'"
->
-  {{ng.changeset.properties[formInput.scriptname]}}
-</span>
+
 <span class="value" ng-if="formInput.value && formInput.readOnly && getPropertyDataType(ng.objectType, formInput.scriptname)==='lookup' ">
   {{cwApi.updateUndefinedForLookupIfRequired(getLookupLabel(ng.objectType.properties[formInput.scriptname],ng.changeset.properties[formInput.scriptname]))
   }}
@@ -16,7 +11,7 @@
   ng-required="formInput.mandatory"
   class="largeCell"
   ng-model="ng.changeset.properties[formInput.scriptname]"
-  ng-if="(!formInput.value || !formInput.readOnly) && getPropertyDataType(ng.objectType, formInput.scriptname)==='text'"
+  ng-if="getPropertyDataType(ng.objectType, formInput.scriptname)==='text'"
 />
 <input
   class="value"
@@ -24,14 +19,14 @@
   ng-required="formInput.mandatory"
   ng-model="ng.changeset.properties[formInput.scriptname]"
   type="checkbox"
-  ng-if="(!formInput.value || !formInput.readOnly) && getPropertyDataType(ng.objectType, formInput.scriptname)==='checkbox'"
+  ng-if=" getPropertyDataType(ng.objectType, formInput.scriptname)==='checkbox'"
 />
 <textarea
   class="value"
   ng-readonly="formInput.readOnly"
   ng-required="formInput.mandatory"
   ng-model="ng.changeset.properties[formInput.scriptname]"
-  ng-if="(!formInput.value || !formInput.readOnly) && getPropertyDataType(ng.objectType, formInput.scriptname)==='memo'"
+  ng-if=" getPropertyDataType(ng.objectType, formInput.scriptname)==='memo'"
 ></textarea>
 
 <input
@@ -49,7 +44,7 @@
   ng-model="ng.changeset.properties[formInput.scriptname]"
   type="number"
   class="value"
-  ng-if="(!formInput.value || !formInput.readOnly) && getPropertyDataType(ng.objectType, formInput.scriptname)==='number'"
+  ng-if="getPropertyDataType(ng.objectType, formInput.scriptname)==='number'"
 />
 
 <select
