fix issue with ie

--- a/angularHTMLayout/cwWorkflow/associationTypeInput.ng.html
+++ b/angularHTMLayout/cwWorkflow/associationTypeInput.ng.html
@@ -1,8 +1,8 @@
 <div class="associationContainer">
-  <div class="searchContainer">
+  <div class="searchContainer" ng-mouseleave="formInput.resultExpend = false">
     <div ng-init="formInput.index = $index" class="label">{{formInput.label}} :&nbsp;</div>
-    <div class="searchList">
-      <div class="searchText">
+    <div class="searchList" ng-class="{expend : formInput.resultExpend}">
+      <div ng-mouseenter="formInput.resultExpend = true" class="searchText">
         <input
           ng-disabled="formInput.objects === undefined || formInput.readOnly || !formInput.objects || !formInput.objects.length === 0"
           ng-required="formInput.mandatory"
