--- a/angularHTMLayout/homePage/home.ng.html
+++ b/angularHTMLayout/homePage/home.ng.html
@@ -6,6 +6,7 @@
       ng-init="display.extended = !display.collapseByDefault"
       ng-style="getStyleForDisplay(display)"
       class="homePage_display {{display.label}}"
+      ng-class="{nextGenCard: nextGenTheme}"
     >
       <div ng-if="display.extendable" class="cwPropertiesTableHeader CwPropertiesLayoutTableHeader extendableTitle">
         <span ng-click="display.extended = !display.extended" ng-if="!display.rightExpandButton">
@@ -32,7 +33,7 @@
       <div
         ng-style="getStyleForDisplayContent(display)"
         class="homePage_display_content"
-        ng-class="{'rightExpandButtonContent':display.rightExpandButtonStyle}"
+        ng-class="{'rightExpandButtonContent':display.rightExpandButtonStyle, 'nextGenCard': !nextGenTheme}"
       >
         <div class="homePage_evolveView" ng-if='display.type==="evolve_view"' ng-init="getHTMLView(display)" ng-bind-html="display.html"></div>
         <div
