Display Label instead of property name

--- a/angularHTMLayout/cwWorkflow/propertyInput.ng.html
+++ b/angularHTMLayout/cwWorkflow/propertyInput.ng.html
@@ -1,4 +1,4 @@
-<div class="label"><span ng-if="formInput.mandatory">*</span>{{getPropertyName(formInput.scriptname)}} :&nbsp;</div>
+<div class="label"><span ng-if="formInput.mandatory">*</span>{{formInput.label}} :&nbsp;</div>
 
 <input
   class="value"
