--- a/angularHTMLayout/cwWorkflow/stepInput.ng.html
+++ b/angularHTMLayout/cwWorkflow/stepInput.ng.html
@@ -1,6 +1,6 @@
 <div class="label"><span ng-if="stepConfiguration.mandatory">*</span>{{stepConfiguration.label}} : &nbsp;</div>
 <select
-  ng-if="!stepConfiguration.creator"
+  ng-if="!stepConfiguration.cwUser && !stepConfiguration.creator"
   ng-disabled="stepConfiguration.readOnly"
   ng-required="stepConfiguration.mandatory"
   ng-model="ng.stepmapping[stepConfiguration.stepName]"
@@ -13,3 +13,50 @@
 </select>
 <span class="value" ng-if="stepConfiguration.creator === true && !ng.stepmapping.creator"> {{cwApi.cwUser.GetCurrentUserFullName()}} </span>
 <span class="value" ng-if="stepConfiguration.creator === true && ng.stepmapping.creator"> {{ng.history.creator}} </span>
+
+<div
+  ng-init="stepConfiguration.objects = ng.cwUsers"
+  ng-if="!stepConfiguration.creator  && stepConfiguration.cwUser === true"
+  class="associationContainer"
+>
+  <div ng-mouseenter="stepConfiguration.resultExpend = true" ng-mouseleave="stepConfiguration.resultExpend = false" class="searchContainer">
+    <div class="searchList" ng-class="{expend : stepConfiguration.resultExpend}">
+      <div class="searchText">
+        <input
+          ng-required="stepConfiguration.mandatory"
+          ng-model="stepConfiguration.searchText"
+          id="{{'objectType_' + $index}}"
+          ng-change="setFormFilter(stepConfiguration)"
+        />
+        <div><i ng-if="stepConfiguration.objects === undefined" class="fa fa-circle-o-notch fa-spin"></i></div>
+      </div>
+      <div
+        ng-if="stepConfiguration.objects && (stepConfiguration.objectsFiltered.length === 0 || (stepConfiguration.objectsFiltered.length === 1 && stepConfiguration.objectsFiltered[0].name == stepConfiguration.result) || stepConfiguration.objectsFiltered.length > 199)"
+        class="workFlowListObjectTypeMessage"
+      >
+        <div class="workFlowListObjectTypeResultSubList">
+          <span ng-if="stepConfiguration.objectsFiltered.length > 199">{{$root.i18n('toManyResult')}}</span>
+          <span
+            ng-if="stepConfiguration.objectsFiltered.length === 0 || (stepConfiguration.objectsFiltered.length === 1 && stepConfiguration.objectsFiltered[0].name == stepConfiguration.result)"
+          >
+            {{$root.i18n('noResult')}}
+          </span>
+        </div>
+      </div>
+      <div
+        ng-if="stepConfiguration.objects && stepConfiguration.objectsFiltered.length < 199 && stepConfiguration.objectsFiltered.length > 0 && (stepConfiguration.objectsFiltered.length !== 1 || stepConfiguration.objectsFiltered[0].name !== stepConfiguration.result )"
+        class="workFlowListObjectTypeResult"
+      >
+        <div id="{{'objectTypeSelect_' + $index}}" class="workFlowListObjectTypeResultSubList">
+          <div
+            ng-class="{selected: stepConfiguration.selectedId === object.object_id}"
+            ng-click="stepConfiguration.cwUserObject = object"
+            ng-repeat="object in stepConfiguration.objectsFiltered"
+          >
+            {{object.name}} ({{object.email}})
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
