sort filter property

--- a/angularHTMLayout/coffee/cwWorkflow_stepsSettings.ng.html
+++ b/angularHTMLayout/coffee/cwWorkflow_stepsSettings.ng.html
@@ -70,7 +70,7 @@
       <tr class="filter-row filter-content filter-cell" ng-repeat="f in stepSetting.filters">
         <td class="filter-property-scriptname filter-cell">
           <select ng-model="f.scriptname">
-            <option ng-selected="x.scriptName === f.scriptname" value="{{x.scriptName}}" ng-repeat="x in getWIObjectType().properties">
+            <option ng-selected="x.scriptName === f.scriptname" value="{{x.scriptName}}" ng-repeat="x in getSortPropFromOT(getWIObjectType()) | orderBy:'name'">
               {{x.name}}
             </option>
           </select>
