using email correctly

--- a/angularHTMLayout/cwWorkflow/stepInput.ng.html
+++ b/angularHTMLayout/cwWorkflow/stepInput.ng.html
@@ -53,7 +53,7 @@
             ng-click="stepConfiguration.cwUserObject = object; stepConfiguration.searchText = object.name + '(' + object.email + ')';"
             ng-repeat="object in stepConfiguration.objectsFiltered"
           >
-            {{object.name}} ({{object.email}})
+            {{object.name}}
           </div>
         </div>
       </div>
